# some-game-for-sem6

./: CMakeLists.txt  README.md  entity.cpp  entity.hpp  info_assets.txt  main.cpp  map.hpp
WORKING MAC VERSION/: app  app.cpp  comprun-old.sh  comprun.sh  main.cpp  other.cpp
untitled2/: AEW_Tools.cpp  CMakeLists.txt  Element.cpp  Game.cpp  Map.cpp  Texture.cpp  aitm3return.cbp  aitm3return.depend  aitm3return.layout  head.hpp  main.cpp
xcode version kopia do test/SDLBruh/: ViewController.h  ViewController.m  main.cpp
xcode version kopia do test/SDLBruh.xcodeproj/project.xcworkspace/xcuserdata/adrian.xcuserdatad/: UserInterfaceState.xcuserstate
xcode version kopia do test/SDLBruhTests/: SDLBruhTests.m
xcode version kopia do test/SDLBruhUITests/: SDLBruhUITestsLaunchTests.m
xcode version kopia do test/game.app/Contents/Frameworks/SDL2_image.framework/Versions/A/: SDL2_image
xcode version/SDLBruh/: entity.cpp  entity.hpp  gem.cpp  gem.hpp  main.cpp  map.cpp  map.hpp
xcode version/SDLBruh.xcodeproj/: project.pbxproj
xcode version/SDLBruh.xcodeproj/project.xcworkspace/xcuserdata/adrian.xcuserdatad/: UserInterfaceState.xcuserstate
xcode version/SDLBruh.xcodeproj/xcuserdata/adrian.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode version/SDLBruhUITests/: SDLBruhUITests.m
xcode version/game.app/Contents/: Info.plist
xcode version/game.app/Contents/Frameworks/SDL2.framework/Versions/A/: SDL2
xcode version/game.app/Contents/MacOS/: SDLBruh
xcode version/game.app/Contents/_CodeSignature/: CodeResources
(+1 files in other folders)
